fix (ui):increase  Hero text flag gap

--- a/src/styles/home.css
+++ b/src/styles/home.css
@@ -40,7 +40,7 @@
 
         img {
           max-height: 1.25rem;
-          margin-left: 0.2em;
+          margin-left: 0.5em;
           line-height: 0;
           font-size: 0.75rem;
           height: 1rem;
